Ankit | Stage | Prod - Flag dropdown on mobile number field is not getting open correctly in case of create company flow

--- a/apps/web-giddh/src/assets/css/global/add-company.scss
+++ b/apps/web-giddh/src/assets/css/global/add-company.scss
@@ -15,3 +15,8 @@
         padding: 0 16px !important;
     }
 }
+.add-company-wrapper  {
+    .mat-horizontal-stepper-content{
+        min-height: calc(100vh - 275px);
+       }
+}
